--- a/package.json
+++ b/package.json
@@ -23,6 +23,23 @@
       }
     ]
   },
+  "viewsContainers": {
+    "activitybar": [
+      {
+        "id": "echoCodexSidebar",
+        "title": "EchoCodex",
+        "icon": "media/echo-icon.svg"
+      }
+    ]
+  },
+  "views": {
+    "echoCodexSidebar": [
+      {
+        "id": "echoCodexView",
+        "name": "Ask Echo"
+      }
+    ]
+  },
   "scripts": {
     "vscode:prepublish": "yarn run package",
     "compile": "webpack",
