--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "categories": [
     "Other"
   ],
-  "activationEvents": [],
+  "activationEvents": [
+
+  ],
   "main": "./dist/extension.js",
   "contributes": {
     "commands": [
@@ -21,24 +23,27 @@
         "command": "echo-codex.setApiKey",
         "title": "Set OpenAI API Key"
       }
-    ]
-  },
-  "viewsContainers": {
-    "activitybar": [
-      {
-        "id": "echoCodexSidebar",
-        "title": "EchoCodex",
-        "icon": "media/echo-icon.svg"
-      }
-    ]
-  },
-  "views": {
-    "echoCodexSidebar": [
-      {
-        "id": "echoCodexView",
-        "name": "Ask Echo"
-      }
-    ]
+    ],
+    "viewsContainers": {
+      "activitybar": [
+        {
+          "id": "echoCodexSidebar",
+          "title": "EchoCodex",
+          "icon": "media/echo-icon.svg",
+          "type": "webview"
+        }
+      ]
+    },
+    "views": {
+      "echoCodexSidebar": [
+        {
+          "id": "echoCodexView",
+          "name": "Ask Echo",
+          "icon": "media/echo-icon.svg",
+          "type": "webview"
+        }
+      ]
+    }
   },
   "scripts": {
     "vscode:prepublish": "yarn run package",
