--- a/echo-ui/tsconfig.app.json
+++ b/echo-ui/tsconfig.app.json
@@ -1,5 +1,15 @@
 {
+  "extends": "./tsconfig.json",
   "compilerOptions": {
+    "baseUrl": ".",
+    "paths": {
+      "@shared/*": ["../shared/*"]
+    },
+    "typeRoots": [
+      "../node_modules/@types",
+      "../node_modules",
+    ],
+    "types": ["vite/client"],
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.app.tsbuildinfo",
     "target": "ES2020",
     "useDefineForClassFields": true,
@@ -23,5 +33,8 @@
     "noFallthroughCasesInSwitch": true,
     "noUncheckedSideEffectImports": true
   },
-  "include": ["src"]
+  "include": [
+    "src/**/*",
+    "../shared/**/*"
+  ],
 }
