--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,22 +1,9 @@
 {
-	"compilerOptions": {
-		"module": "Node16",
-		"target": "ES2022",
-		"lib": [
-			"ES2022"
-		],
-		"sourceMap": true,
-		"outDir": "out",
-		"rootDir": ".",
-		"strict": true,   /* enable all strict type-checking options */
-		"isolatedModules": true,
-		"esModuleInterop": true,
-    	"skipLibCheck": true
-		/* Additional Checks */
-		// "noImplicitReturns": true, /* Report error when not all code paths in function return a value. */
-		// "noFallthroughCasesInSwitch": true, /* Report errors for fallthrough cases in switch statement. */
-		// "noUnusedParameters": true,  /* Report errors on unused parameters. */
-	},
-	"include": ["src", "jests"],
-	"exclude": ["node_modules", "out", "dist"],
+  "files": [],
+  "references": [
+    { "path": "./echo-ui" }
+  ],
+  "compilerOptions": {
+    "esModuleInterop": true
+  }
 }
